tests/toylang/neg/001525_mutation.toylang
program a = { var int : bool; } .
